IALERT-3817: Add a limit of 100 issues in the issue search to limit the number of duplicate tickets.